--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.4.6",
     "openai": "^5.12.2",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.54",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
