--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "nodemailer": "^7.0.5",
     "openai": "^5.12.2",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.2.0",
